DHLQa2/force-app/main/default/objects/Customer__c/fields/Billing_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Doc_No__c</fullName>
    <label>Billing Doc No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>