DHLQa2/force-app/main/default/objects/Customer__c/fields/Contact_Employee__c.field-meta.xml
<CustomField>
    <fullName>Contact_Employee__c</fullName>
    <label>Contact Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>