DHLQa2/force-app/main/default/objects/Customer__c/fields/Contact_Landline__c.field-meta.xml
<CustomField>
    <fullName>Contact_Landline__c</fullName>
    <label>Contact Landline</label>
    <type>Phone</type>
</CustomField>