DHLQa2/force-app/main/default/objects/Customer__c/fields/Customer_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref_Number__c</fullName>
    <label>Customer Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>