DHLQa2/force-app/main/default/objects/Customer__c/fields/Customer_Segement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segement__c</fullName>
    <label>Customer Segement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRY</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>