DHLQa2/force-app/main/default/objects/Customer__c/fields/Dispatch_To_Person__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_To_Person__c</fullName>
    <label>Dispatch To Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>