DHLQa2/force-app/main/default/objects/Customer__c/fields/EKP__c.field-meta.xml
<CustomField>
    <fullName>EKP__c</fullName>
    <label>EKP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>