DHLQa2/force-app/main/default/objects/Customer__c/fields/Event_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Event_Assigned_To__c</fullName>
    <label>Event Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>