DHLQa2/force-app/main/default/objects/Customer__c/fields/Event_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed_Date__c</fullName>
    <label>Event Completed Date</label>
    <type>Date</type>
</CustomField>