DHLQa2/force-app/main/default/objects/Customer__c/fields/Functional_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Functional_Head_Email__c</fullName>
    <label>Functional Head Email</label>
    <type>Email</type>
</CustomField>