DHLQa2/force-app/main/default/objects/Customer__c/fields/Indent_No__c.field-meta.xml
<CustomField>
    <fullName>Indent_No__c</fullName>
    <label>Indent No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>