DHLQa2/force-app/main/default/objects/Customer__c/fields/Is_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field signifies if the Customer is a Key Account or nit
If value is,
true - Customer is a key account
false - Customer is not a key account</description>
    <label>Is Key Account</label>
    <type>Checkbox</type>
</CustomField>