DHLQa2/force-app/main/default/objects/Customer__c/fields/Is_Shared__c.field-meta.xml
<CustomField>
    <fullName>Is_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to maintain flag when customer record shared with first caller</description>
    <label>Is Shared</label>
    <type>Checkbox</type>
</CustomField>