DHLQa2/force-app/main/default/objects/Customer__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>