DHLQa2/force-app/main/default/objects/Customer__c/fields/Source_City__c.field-meta.xml
<CustomField>
    <fullName>Source_City__c</fullName>
    <label>Source City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>