DHLQa2/force-app/main/default/objects/Customer__c/fields/Src_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Src_Contact_Email__c</fullName>
    <label>Src Contact Email</label>
    <type>Email</type>
</CustomField>