DHLQa2/force-app/main/default/objects/Customer__c/fields/Src_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Src_Contact_Mobile__c</fullName>
    <label>Src Contact Mobile</label>
    <type>Phone</type>
</CustomField>