DHLQa2/force-app/main/default/objects/Customer__c/fields/Src_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Src_Contact_Person__c</fullName>
    <label>Src Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>