DHLQa2/force-app/main/default/objects/Customer__c/fields/Trip_No__c.field-meta.xml
<CustomField>
    <fullName>Trip_No__c</fullName>
    <label>Trip No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>