DHLQa2/force-app/main/default/objects/Customer__c/recordTypes/Customer_Excellence.recordType-meta.xml
<RecordType>
    <fullName>Customer_Excellence</fullName>
    <active>true</active>
    <label>Customer Excellence</label>
</RecordType>