DHLQa2/force-app/main/default/objects/Customer__c/recordTypes/Operations.recordType-meta.xml
<RecordType>
    <fullName>Operations</fullName>
    <active>true</active>
    <label>Operations</label>
</RecordType>