DHLQa2/force-app/main/default/objects/Customer__c/recordTypes/Order_Management.recordType-meta.xml
<RecordType>
    <fullName>Order_Management</fullName>
    <active>true</active>
    <label>Order Management</label>
</RecordType>