DHLQa2/force-app/main/default/objects/Customer__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <label>Sales</label>
</RecordType>